# DLT-Evolution-Lab

./: .gitignore  M3-Composer2.0-任务拆解与执行清单.md  M3-首版预测引擎-详细技术规范.md  M4-Composer2.0-任务拆解与执行清单.md  M4-M5-验收与整改报告.md  M4-漂移检测与优化-详细技术规范.md  M5-Composer2.0-任务拆解与执行清单.md  M5-开奖复盘与自动任务-详细技术规范.md  M6-Composer2.0-任务拆解与执行清单.md  M6-前端体验与测试闭环-详细技术规范.md  M6-验收与整改报告.md  README.md  实施计划.md  开发文档-Composer2.0执行规范.md  设计方案.md
apps/api/: pyproject.toml
apps/api/app/: main.py
apps/api/app/core/: paths.py
apps/api/app/engine/: __init__.py  (+10 more)
apps/api/tests/: conftest.py  test_analysis_api.py  test_auto_promotion_eval.py  test_backtest_engine.py  test_calibration.py  test_draw_ingestion.py  test_draw_to_postmortem_pipeline.py  test_drift_metrics.py  test_evaluate_promotion_m5.py  test_features.py  test_health.py  test_issue_status_m6.py  test_m4_api_contract.py  test_m4_coverage_helpers.py  test_m4_performance_budget.py  test_m4_reproducibility_regression.py  test_m5_api_contract.py  test_model_credit.py  test_model_promotion_gate.py  test_official_sync_service.py  test_optimization_service_unit.py  test_optimize_flow.py  test_optuna_objective.py  test_position_model.py  test_postmortem_service.py  test_postmortem_trigger_optimize.py  test_predict_pipeline_regressions.py  test_prize_rules.py  test_publish_predict_api.py  test_reproducibility.py  test_reproducibility_regression.py  test_scheduler_auto_jobs.py  test_scheduler_logs_contract.py  test_scheduler_state_machine.py  test_schema_contract.py  test_search_ticketing.py  test_sporttery_history_service.py  test_task_idempotency.py
(+107 files in other folders)
